# boustrophedon.github.io

./: .gitignore  .gitmodules  CNAME  Makefile  README.md  a-new-start.html  about.html  archive.html  archives.html  authors.html  categories.html  convolution.html  first-post.html  how-im-deploying-dart-server-code-on-digitalocean.html  how-to-format-your-entire-codebase-without-introducing-backdoors.html  how-to-make-daily-backups-with-rdiff-backup-and-systemd.html  i-went-to-an-igda-nj-meetup-and-it-was-cool.html  index.html  index2.html  more-thoughts-on-cogs.html  okrs-are-just-tdd-for-project-management-measure-what-matters-by-john-doerr.html  okrs-are-tdd.html  pair-programming-with-screen.html  pelicanconf.py  principles-of-digital-image-synthesis.html  publishconf.py  tags.html  this-will-make-some-people-mad.html  thoughts-on-what-cogs-should-be.html
pelican/: Pipfile  clean.sh  pelicanconf.py  publish.sh  publishconf.py  pyproject.toml
pelican/minimalXY0/: LICENSE  README.md
pelican/minimalXY0/templates/: article.html  author.html  authors.html  base.html  index.html  introduction.html  tag.html
pelican/posts/: backup_post.md  cogs_igda.md  cogs_thoughts.md  cogs_thoughts_two.md  dart_server_deployment.md  first.md  javascript_metaphor.md  minimal_raytracer_1.md  newblog.md  okrs_and_tdd.md  pair_programming_with_screen.md  processes_are_important.md  youtube-is-stupid.md
pelican/posts/drafts/: TDD_mutation_property.md  cogs_igda.md  cogs_thoughts_two.md  dart_server_deployment.md  feedback-in-products.md  (+12 more)
pelican/simple_boxes/: README.md
(+136 files in other folders)
