[tool.poetry]
name = "blog-pelican"
version = "0.1.0"
description = ""
authors = ["Harry Stern <harry@harrystern.net>"]

[tool.poetry.dependencies]
python = "^3.9"
pelican = "^4.6.0"
Markdown = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
